include_directories (${tpa_SOURCE_DIR}/include)

add_subdirectory (global-pts)
add_subdirectory (dot-pointer-cfg)
add_subdirectory (pts-dump)
add_subdirectory (table)
add_subdirectory (table-check)
add_subdirectory (pts-inst)
add_subdirectory (pts-log-dump)
add_subdirectory (pts-verify)
add_subdirectory (scripts)